--- a/templates/history.html
+++ b/templates/history.html
@@ -34,11 +34,11 @@
           <div class="col-auto">
             <select class="custom-select" name="alliance_id">
               <option></option>
-              <option value="9999" {% if templates['alliance'] == 9999 %} selected {%endif %}>All
+              <option value="9999" {% if t.alliance == 9999 %} selected {%endif %}>All
               </option>
-              {% for alliance in alliances %}
+              {% for alliance in t.alliances %}
               <option value="{{alliance.id}}"
-              {% if templates['alliance'] == alliance.id %} selected {% endif %}>{{alliance.name}}
+              {% if t.alliance == alliance.id %} selected {% endif %}>{{alliance.name}}
               </option>
               {% endfor %}
             </select>
@@ -48,8 +48,8 @@
             Opponent:
           </div>
           <div class="col-auto">
-            <div id="opponentsAuto" class="autocomplete" data-autocomplete='{{ opponents|tojson }}'>
-              <input class="form-control" type="text" name="opponent" value="{{templates['opponent']}}" autocomplete="off">
+            <div id="opponentsAuto" class="autocomplete" data-autocomplete='{{t.opponents|tojson}}'>
+              <input class="form-control" type="text" name="opponent" value="{{t.opponent}}" autocomplete="off">
             </div>
           </div>
 
@@ -57,10 +57,10 @@
             Date Range:
           </div>
           <div class="col-auto">
-            <input class="form-control" type="date" name="start_day" value="{{templates['start_day']}}">
+            <input class="form-control" type="date" name="start_day" value="{{t.start_day}}">
           </div>
           <div class="col-auto">
-            <input class="form-control" type="date" name="end_day" value="{{templates['end_day']}}">
+            <input class="form-control" type="date" name="end_day" value="{{t.end_day}}">
           </div>
         </div>
       </form>
@@ -109,21 +109,21 @@
             <th class="sticky-top">Opp Points</th>
           </tr>
 
-          {% for war in wars %}
+          {% for war in t.wars %}
           <tr>
-            <td class="center {{war.winClass}} {{war.trackedClass}}">
+            <td class="center {{war.winClass()}} {{war.trackedClass()}}">
               <a href="/war_editor?war_id={{war.id}}">{{war.date}}</a>
             </td>
-            <td class="left {{war.winClass}} {{war.trackedClass}}">
-              <a href="/history?alliance_id={{templates['alliance']}}&opponent_id={{war.opponent_id}}">{{war.opponent.name}}</a>
+            <td class="left {{war.winClass()}} {{war.trackedClass()}}">
+              <a href="/history?alliance_id={{t.alliance}}&opponent_id={{war.opponent_id}}">{{war.opponent.name}}</a>
             </td>
-            <td class="left {{war.winClass}} {{war.trackedClass}}">
-              {{templates['leagues'][war.league]}}
+            <td class="left {{war.winClass()}} {{war.trackedClass()}}">
+              {{war.leagueText()}}
             </td>
-            <td class="center {{war.winClass}} {{war.trackedClass}}">
+            <td class="center {{war.winClass()}} {{war.trackedClass()}}">
               {{war.our_score}}
             </td>
-            <td class="center {{war.winClass}} {{war.trackedClass}}">
+            <td class="center {{war.winClass()}} {{war.trackedClass()}}">
               {{war.opp_score}}
             </td>
           </tr>
