--- a/templates/player_editor.html
+++ b/templates/player_editor.html
@@ -1,28 +1,15 @@
-<!DOCTYPE html>
-<html>
-  <head>
-    <meta charset="utf-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
+{% extends 'base.html' %}
 
-    <link href="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-Vkoo8x4CGsO3+Hhxv8T/Q5PaXtkKtu6ug5TOeNV6gBiFeWPGFN9MuhOf23Q9Ifjh" crossorigin="anonymous">
+{% block loadjs %}
+    <script type="text/javascript" src="{{url_for('static', filename='player_editor.js')+v}}"></script>
+{% endblock %}
 
-    <script src="https://code.jquery.com/jquery-3.4.1.min.js" integrity="sha256-CSXorXvZcTkaix6Yvo6HppcZGetbYMGWSFlBw8HfCJo=" crossorigin="anonymous">
-    </script>
+{% block title %}Player Editor{% endblock %}
+{% block header %}TFEW Player Editor{% endblock %}
+{% block nav_player_editor %}active{% endblock %}
 
-    <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/js/bootstrap.min.js" integrity="sha384-wfSDF2E50Y2D1uUdj0O3uMBJnjuUD4Ih7YwaYd1iqfktj0Uod8GCExl3Og8ifwB6" crossorigin="anonymous"></script>
-
-    <script type="text/javascript" src="{{url_for('static', filename='jquery.serialize-object.min.js')}}"></script>
-
-    <link rel="stylesheet" type="text/css" href="{{url_for('static', filename='style.css')}}">
-    <script type="text/javascript" src="{{url_for('static', filename='common.js')}}"></script>
-    <script type="text/javascript" src="{{url_for('static', filename='player_editor.js')}}"></script>
-
-    <title>Player Editor</title>
-  </head>
-  <body>
-    <div class="container">
-      <a href="/">Home</a><br />
-      <h1>TFEW Player Editor</h1>
+{% block update_form %}{% endblock %}
+{% block content %}
       <form method="POST">
         <table class="table table-sm table-striped">
           <thead>
@@ -35,7 +22,7 @@
               <th colspan="100"></th>
             </tr>
           </thead>
-          {% for player in players %}
+          {% for player in t.players %}
           <tr>
             <td></td>
             <td>
@@ -118,6 +105,4 @@
       </form>
       <div id="alert_wrapper"></div>
       <div class="row">&nbsp;</div>
-    </div>
-  </body>
-</html>
+{% endblock %}
