--- a/templates/upload.html
+++ b/templates/upload.html
@@ -1,27 +1,16 @@
-<!doctype html>
-<html>
+{% extends 'base.html' %}
 
-<head>
-  <meta charset="utf-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
+{% block loadjs %}
+    <script type="text/javascript" src="{{url_for('static', filename='uploader.js')+v}}"></script>
+{% endblock %}
 
-  <link href="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-Vkoo8x4CGsO3+Hhxv8T/Q5PaXtkKtu6ug5TOeNV6gBiFeWPGFN9MuhOf23Q9Ifjh" crossorigin="anonymous">
+{% block title %}Upload Scores{% endblock %}
+{% block header %}TFEW AI Score Processor{% endblock %}
+{% block nav_upload %}active{% endblock %}
 
-  <script src="https://code.jquery.com/jquery-3.4.1.min.js" integrity="sha256-CSXorXvZcTkaix6Yvo6HppcZGetbYMGWSFlBw8HfCJo=" crossorigin="anonymous">
-  </script>
+{% block update_form %}{% endblock %}
 
-  <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/js/bootstrap.min.js" integrity="sha384-wfSDF2E50Y2D1uUdj0O3uMBJnjuUD4Ih7YwaYd1iqfktj0Uod8GCExl3Og8ifwB6" crossorigin="anonymous"></script>
-
-  <link rel="stylesheet" type="text/css" href="{{url_for('static', filename='style.css')}}">
-  <script type="text/javascript" src="{{url_for('static', filename='common.js')}}"></script>
-  <script type="text/javascript" src="{{url_for('static', filename='uploader.js')}}"></script>
-
-  <title>Upload scores</title>
-</head>
-
-<body>
-  <div class="container">
-    <div class="row">
+{% block content %}
       <div class="col-sm">
         <div class="mb-3 mt-3">
           <h2 class="mb-3" style="font-weight: 300">Upload score video or image</h2>
@@ -77,7 +66,4 @@
         </div>
       </div>
     </div>
-  </div>
-
-</body>
-</html>
+{% endblock %}
