--- a/static/style.css
+++ b/static/style.css
@@ -1,3 +1,8 @@
+html {
+  /* Fix for scrollbar shift */
+  margin-left: calc(100vw - 100%);
+}
+
 body {
   padding-top: 65px;
 }
@@ -71,6 +76,16 @@ body {
   position: sticky;
   left: 0px;
   background: white;
+  z-index: 1020;
+}
+
+.sticky-top-left {
+  position: -webkit-sticky;
+  position: sticky;
+  top: 56px;
+  left: 0px;
+  background: white;
+  z-index: 1025;
 }
 
 .sticky-top {
@@ -149,6 +164,12 @@ body {
   background-color: #4a9a4a;
 }
 
+.error {
+  color: red;
+  list-style: none;
+  padding: 0;
+}
+
 .collapse:not(.show) {
   display: none!important;
 }
@@ -156,6 +177,7 @@ body {
 .autocomplete {
   position: relative;
   display: inline-block;
+  width: 100%;
 }
 
 .autocomplete-items {
@@ -187,4 +209,44 @@ body {
 
 #chart_Score {
   height: 20em;
+}
+
+.sorted-none,
+.sorted-up,
+.sorted-down {
+  padding-right: 1.4em!important;
+}
+
+.sorted-none:before,
+.sorted-none:after,
+.sorted-down:after,
+.sorted-up:after{
+  border: 4px solid transparent;
+  content: ' ';
+  display: block;
+  height: 0;
+  right: 5px;
+  top: 50%;
+  position: absolute;
+  width: 0;
+}
+
+.sorted-none:before {
+  border-bottom-color: silver;
+  margin-top: -9px;
+}
+
+.sorted-none:after {
+  border-top-color: silver;
+  margin-top: 1px;
+}
+
+.sorted-down:after{
+  margin-top: 1px;
+  border-top-color: black;
+}
+
+.sorted-up:after{
+  margin-top: -9px;
+  border-bottom-color: black;
 }
