--- a/templates/player.html
+++ b/templates/player.html
@@ -47,7 +47,11 @@
           {% for war in t.wars %}
           <tr>
             <td class="min-width {{war.winClass()}} {{war.trackedClass()}}">
+              {% if current_user.officer %}
               <a href="{{url_for('war_editor', war_id=war.id)}}">{{war.date}}</a>
+              {% else %}
+              {{war.date}}
+              {% endif %}
             </td>
             <td class="left {{war.winClass()}} {{war.trackedClass()}}">
               <a href="{{url_for('player_view', player_id=t.player.id, alliance_id=t.alliance, opponent_id=war.opponent_id)}}">{{war.opponent.name}}</a>
