--- a/templates/scoreboard.html
+++ b/templates/scoreboard.html
@@ -14,7 +14,11 @@
           <th class="header-right" colspan="5">Date</th>
           {% for war in t.wars %}
           <td class="sticky-top min-width {{war.winClass()}} {{war.trackedClass()}}">
+            {% if current_user.officer %}
             <a href="{{url_for('war_editor', war_id=war.id)}}">{{war.date}}</a>
+            {% else %}
+            {{war.date}}
+            {% endif %}
           </td>
           {% endfor %}
         </tr>
@@ -109,7 +113,13 @@
 
         {% for player in t.players %}
         <tr>
-          <td class="header-left sticky-left"><a href="{{url_for('player_view', player_id=player.id)}}">{{player.name}}</a></td>
+          <td class="header-left sticky-left">
+            {% if current_user.id == player.id or current_user.officer %}
+            <a href="{{url_for('player_view', player_id=player.id)}}">{{player.name}}</a>
+            {% else %}
+            {{player.name}}
+            {% endif %}
+          </td>
           <td>{{player.trackedAvg}}</td>
           <td>{{player.untrackedAvg}}</td>
           <td>{{player.primeAvg}}</td>
