--- a/templates/signup.html
+++ b/templates/signup.html
@@ -15,6 +15,19 @@
         {{ form.csrf_token }}
 
         <div class="form-group row col-sm-5 col-md-3">
+          {{ form.auth(class_='form-control',
+                           placeholder=form.auth.label.text,
+                           autocomplete='new-password') }}
+          {% if form.auth.errors %}
+          <ul class="error">
+            {% for error in form.auth.errors %}
+            <li>{{error}}</li>
+            {% endfor %}
+          </ul>
+          {% endif %}
+        </div>
+
+        <div class="form-group row col-sm-5 col-md-3">
           <div id="playersAuto" class="autocomplete" data-autocomplete='{{t.players|tojson}}'>
             {{ form.name(class_='form-control',
                          placeholder=form.name.label.text,
